[project]
name = "poindexter-backend"
version = "0.5.0"
description = "Poindexter backend — FastAPI + specialized AI agents. Built by Glad Labs LLC."
authors = [{ name = "Glad Labs LLC", email = "hello@gladlabs.io" }]
# SPDX license — Apache-2.0, matching LICENSE / src/LICENSE.md (poindexter#645).
license = "Apache-2.0"
readme = "README.md"
# Build metadata only; the dependency-locking python range lives in
# [tool.poetry.dependencies] below. Per Poetry's PEP 621 docs the two are
# intentionally distinct (this is the build floor, that is the solver range).
requires-python = ">=3.13,<3.14"
# Dependencies are declared dynamic so they stay in [tool.poetry.dependencies]:
# PEP 508 strings can't express the explicit pytorch-cu128 source pin on torch
# (glad-labs-stack#334) or the optional/marker syntax. classifiers stay dynamic
# so poetry-core keeps auto-generating them.
dynamic = ["dependencies", "classifiers"]

[tool.poetry]
packages = [
    { include = "cofounder_agent", from = ".." },
    { include = "poindexter", from = "." }
]

[tool.poetry.dependencies]
# Pinned to 3.13.x: litellm >=1.83.7 (which lands proxy-mode CVE
# patches GHSA-r75f-5x8p-qvmc / -xqmj-j6mv-4862 / -v4p8-mg3p-g94g)
# regressed its python upper bound to <3.14. We only run on 3.13 in
# CI + on Matt's PC anyway; widening to 3.14 was speculative and
# blocked the security bump.
python = ">=3.13,<3.14"

# Web Framework
fastapi = ">=0.138.2"
uvicorn = {version = ">=0.43,<0.49", extras = ["standard"]}
pydantic = {extras = ["email"], version = "^2.12.5"}

# CLI — the `poindexter` operator CLI (poindexter/cli/) is built on click.
# Declared explicitly because the CLI imports it directly; it was relying on
# a transitive pull-in (surfaced while adding `poindexter doctor`, #527).
click = "^8.1"

# Database
asyncpg = "^0.31"
# sqlalchemy, psycopg2-binary, sqladmin removed — admin panel unused, all DB via asyncpg
# anthropic, openai removed — zero imports, pipeline uses Ollama via httpx
# google-genai removed — only in legacy llm_client.py (dead code)

# Async/Concurrency
aiohttp = "^3.9"
httpx = "^0.28"
# tenacity owns the retry/backoff loop in services/ollama_client.py
# (see issue Glad-Labs/poindexter#200). Was already pulled in
# transitively by other deps; declared explicitly so the upper bound
# is ours to control.
tenacity = "^9.1"
# aiolimiter caps concurrent in-flight requests against the local
# Ollama server (services/ollama_client.py — issue
# Glad-Labs/poindexter#200). Limit is configurable via
# app_settings.ollama_concurrency_limit.
aiolimiter = "^1.2"

# Data Processing
# pandas, numpy removed — never imported in production code.

# Logging & Monitoring
setuptools = "<81"  # Pin to avoid pkg_resources deprecation (see: setuptools#3932)
# sentry-sdk re-added 2026-04-21 — GlitchTip DSN now configured in
# app_settings.sentry_dsn, error tracking is active for the cofounder-agent
# project. [fastapi] extra wires the ASGI + Starlette middleware.
sentry-sdk = { version = "^2.18.0", extras = ["fastapi"] }

# OpenTelemetry exporter + FastAPI instrumentation — required when
# app_settings.enable_tracing=true. The base opentelemetry-api / -sdk
# packages ship the `opentelemetry` namespace, but the OTLP HTTP
# exporter and the FastAPIInstrumentor live in separate distributions.
# Without these the TracerProvider has no exporter and per-request
# spans never fire, so Tempo shows empty panels even though the
# worker reports tracing enabled. Closes Glad-Labs/poindexter#505.
opentelemetry-exporter-otlp = "^1.41"
opentelemetry-instrumentation-fastapi = "^0.62b0"
# httpx egress instrumentation — client spans + W3C `traceparent` injection on
# outbound calls (Ollama / LiteLLM / web research) so trace context survives
# every HTTP hop and an adopter's own OTLP backend stitches the run into one
# trace (Glad-Labs/poindexter#1997 Tier 1a).
opentelemetry-instrumentation-httpx = "^0.62b0"

# Storage & Files
python-multipart = ">=0.0.31"
# pillow removed — never imported in production code (issue #1341)
# aiofiles removed — never imported in production code (poindexter#714)

# ML/AI - Image Generation (image-gen)
# torch is the CPU build here: the two pipeline images (worker + OSS
# standalone) install it only via the `rerank` extra to drive the
# LlamaIndex cross-encoder reranker, which runs on CPU (#1882). Neither
# image has GPU passthrough or `diffusers`, so the CUDA build was ~2 GB
# of dead weight (the nvidia-*/cuda-* + triton transitive wheels). The cu128 build
# that actually renders images on Matt's RTX 5090 lives self-contained in
# scripts/Dockerfile.image-gen (its own pytorch/pytorch:*-cuda12.8 base), not
# in this lock. <2.12 bounds the pin so a re-lock can't silently jump to
# a new CUDA-major torch (the 2.12/CUDA-13 split that bit #1891). See
# docs/superpowers/specs/2026-06-23-worker-cpu-torch-design.md.
torch = { version = ">=2.7,<2.12", source = "pytorch-cpu", optional = true }
transformers = { version = ">=4.40.0", optional = true }
# `accelerate` removed — zero imports in tracked code. Was optional ml extra.

# Additional Required Packages
structlog = "^25"
pyjwt = ">=2.12.0,<3.0.0"  # CVE GHSA-752w-5fwx-jx9f fix — pin to safe 2.x series
# redis removed — redis_enabled=false, in-memory TTL cache is sufficient
diffusers = { version = ">=0.36,<0.39", optional = true }
# `peft` removed — zero imports in tracked code. Was optional ml extra.

# Content Processing
markdown = "^3.5"

# Utilities
slowapi = "^0.1.9"
starlette = ">=1.3.1"  # CVE-2026-48710 (BadHost) — Host-header URL re-parse can shift request.url.path
cryptography = ">=48.0.1"  # GHSA-537c-gmf6-5ccf (bundled OpenSSL, Trivy HIGH) + GHSA-r6ph-v2qm-q3c2, GHSA-m959-cc7f-wv43, GHSA-p423-j2cm-9vmq
# sqladmin removed — admin panel broken (404), pgAdmin used instead
email-validator = "^2.3.0"
resend = "^2.27.0"
ddgs = "^9.0"
beautifulsoup4 = "^4.12"
boto3 = "^1.42.84"
cloudinary = "^1.41"
playwright = "^1.47"
mcp = ">=1.23.0"
pillow = ">=12.2.0"
apscheduler = "^3.11.3"
# Apprise — unified push-notification library backing the generic
# services/integrations/handlers/outbound_apprise.py handler. Already
# resolved in poetry.lock at 1.11.0 via Prefect's dependency tree;
# declared directly here so the outbound notify path owns its floor
# instead of riding a transitive pin. BSD-2-Clause (permissive).
apprise = ">=1.11,<2.0"
prometheus-client = "^0.25.0"
# Continuous profiling — LGTM+P stack (GH #75). Opt-in via app_settings
# enable_pyroscope; services/profiling.py configures the agent.
# sys_platform marker: pyroscope-io ships no Windows wheels (closes #224)
# — required for Matt's Windows host `poetry install --extras profiling`
# to skip cleanly instead of falling through to a Rust source build.
pyroscope-io = { version = "^1.0.12", optional = true, markers = "sys_platform != 'win32'" }
# Bumped past 1.0.10 to clear GHSA — checkpoint loading had unsafe
# msgpack deserialization in <1.0.10. langgraph 1.x is API-compatible
# with the StateGraph + END + MemorySaver surface used in
# services/writer_rag_modes/two_pass.py.
# Declare langchain-core explicitly: template_runner.py, pipeline_architect.py,
# and pipeline_templates/__init__.py all import it directly. It was riding in
# transitively via langgraph; declaring it lets us own the floor (poindexter#739).
langchain-core = ">=1.3.3,<2.0"
langgraph = ">=1.0.10,<2.0"
# Explicit floor — langgraph 1.x's resolver allows <5.0.0 but Poetry
# prefers the older 3.x without prodding. <4.0 has a BaseCache RCE
# (Deserialization of Untrusted Data, GHSA-via-#17). Pin to 4.x+.
langgraph-checkpoint = ">=4.0.0,<5.0"
# Postgres-backed checkpointer for TemplateRunner. Wired Phase 1.5
# (Glad-Labs/poindexter#371) — gated by the
# ``template_runner_use_postgres_checkpointer`` app_settings key
# (default false). When the flag is on, ``services/template_runner.py``
# constructs an ``AsyncPostgresSaver.from_conn_string`` per run() call
# so LangGraph state survives restarts. Bundles psycopg 3 with the
# pre-built binary wheel so Windows hosts (Matt's worker) don't need
# the libpq toolchain. v3.x is the current line; depends transitively
# on langgraph-checkpoint>=2.1.2,<5.0 which is a subset of the >=4.0
# floor we already declare above.
langgraph-checkpoint-postgres = ">=3.0.0,<4.0"
psycopg = { version = ">=3.2.0,<4.0", extras = ["binary", "pool"] }
# datasets pinned to ^3.0 to override the legacy 1.1.1 transitive dep
# pulled in by ragas — 1.1.1 calls `pyarrow.PyExtensionType` which was
# removed in pyarrow 14, breaking topic_discovery_signals at runtime
# with `module 'pyarrow' has no attribute 'PyExtensionType'`.
# datasets >=2.16 handles the new pyarrow API; 3.x is the current
# stable line. Closes Glad-Labs/poindexter#308.
datasets = ">=5.0.0,<6"
# LiteLLM — backs services/cost_lookup.py (model_cost table — #199),
# the LiteLLMProvider plugin (services/llm_providers/litellm_provider.py
# — #372 cutover), and the Langfuse callback wiring used at lifespan
# startup. Without this dep declared, both the cost layer and the
# Langfuse tracer silently no-op (try/except ImportError guards) — see
# the migration 0160 docstring for the gap analysis. Floor bumped to
# 1.83.7 to land the proxy-mode patches for GHSA-r75f-5x8p-qvmc
# (SQL injection in proxy auth — critical), GHSA-xqmj-j6mv-4862
# (proxy SSTI — high), GHSA-v4p8-mg3p-g94g (proxy MCP RCE — high).
# Poindexter doesn't run litellm-proxy; the bump is hygiene + closing
# the dependabot alerts that landed with the guardrails-ai dep.
litellm = ">=1.83.7,<2.0"

# Langfuse — same gap as litellm. PR #47 (Langfuse-first prompt manager)
# and PR #241 (LiteLLM→Langfuse callback) both import langfuse with
# try/except ImportError guards but the dep was never declared, so both
# integrations have been silently no-opping in production. Adding here
# so the worker image rebuild picks both up alongside litellm.
#
# Bumped 3.x → 4.x (2026-05-15). The shim's API surface (``observe`` /
# ``get_client`` / ``update_current_generation`` / ``update_current_trace``)
# is unchanged across the major; 3.x is EOL.
#
# Floor raised 4.6 → 4.12 (2026-06-29): the ``EventSerializer`` cycle bug
# (``_utils/serializer.py``) that hung the asyncio loop on cyclic object
# graphs is fixed upstream by langfuse/langfuse-python#1577 (first released
# in v4.7.0 — depth limit + cycle detection). 4.6.1 was the last vulnerable
# release; the deployed worker image stayed stuck on it even though the lock
# had already advanced to 4.9.0 (fixed, but never rebuilt/deployed). This
# raises the lock to 4.12.0 and the image rebuild finally ships it. The
# ``_install_cycle_safe_serializer_patch`` in ``services/langfuse_shim.py``
# is RETAINED as idempotent defense-in-depth across this 6-minor jump — it
# no-ops harmlessly on the fixed serializer and self-disables if the import
# path ever moves. Safe to retire in a fast-follow once re-enabled tracing
# has soaked. See memory reference_langfuse_serializer_recursion_bug.md +
# .shared-context/upstream-bug-reports/langfuse-event-serializer-cycle.md.
langfuse = "^4.12"
deepeval = "^4.0.7"
# guardrails-ai dropped 2026-05-12 — PyPI quarantined the package after
# a suspect 0.10.1 release published that day (CVE-2026-45758, malware /
# supply-chain compromise). It is NOT installable. The two QA rails it
# powered (guardrails_brand, guardrails_competitor) were only ever a
# thin wrapper over logic WE own — the brand rail ran content_validator's
# fabrication patterns and the competitor rail was a re word-boundary
# regex over an operator CSV. As of #996 services/guardrails_rails.py is
# a NATIVE reimplementation with no third-party dependency, so the
# capability is preserved with zero supply-chain surface. DO NOT re-add
# guardrails-ai.
ragas = ">=0.2,<0.5"
langchain-ollama = "^1.1.0"
llama-index-core = "^0.14.23"
llama-index-embeddings-ollama = "^0.9.0"
# Cross-encoder reranker for the LlamaIndex rag_engine Phase C wrapper
# (services/rag_engine.py::_build_rerank_retriever_class). The warmup
# task in main.py's lifespan imports CrossEncoder when
# rag_rerank_enabled=true; without this dep declared, every worker
# boot logs `Cross-encoder warmup failed (non-critical): No module
# named 'sentence_transformers'` and rerank silently degrades to
# passthrough. 3.x is the current line; floor at 3.4 lands the
# ``onnx`` optional acceleration path that the MiniLM models we use
# (``cross-encoder/ms-marco-MiniLM-L-6-v2``) benefit from. The rerank
# wrapper calls the upstream ``sentence_transformers.CrossEncoder``
# API directly, so we do NOT pull in a separate
# ``llama-index-postprocessor-sbert-rerank`` adapter — that would only
# add version-skew tax.
#
# Made optional (rerank extra, 2026-06-23): sentence-transformers is the
# only main-path puller of torch, which is pinned to the CUDA-only
# pytorch-cu128 source. Gating it behind the `rerank` extra lets CI's
# default install skip the ~2.5GB cu128 wheel on GPU-less runners. The
# worker + OSS standalone images opt back in via --extras rerank; host
# dev via bootstrap.sh. See docs/superpowers/specs/2026-06-23-ci-rerank-extra-design.md.
sentence-transformers = { version = "^3.4", optional = true }
# Pinned to match the server-side image (``prefecthq/prefect:3.6.29``)
# below in docker-compose.local.yml. Client/server version drift kills
# the work-pool poll path silently: the worker prints a "server is older
# than your client" warning, then fails to claim any flow runs, then sits
# idle. Whole content pipeline went dark for ~28 hours 2026-05-25
# through 2026-05-27 because of this exact mismatch (the ``^3.7.0``
# caret was bumping the worker past the server's 3.6.x). Bump together
# when upgrading.
prefect = ">=3.6.29,<3.8.0"

# YouTube Data API v3 — used by services/publish_adapters/youtube.py
# for the videos.insert resumable upload path. Declared as an optional
# extra (`poetry install --extras youtube`) so the worker image only
# pulls them in when YouTube publishing is actually wired.
#
# NOTE on cost: the YouTube Data API v3 is FREE — quota is enforced
# in units (10,000/day default), NOT dollars. videos.insert is ~1,600
# units, so a single channel can ship ~6 uploads/day without paying
# anything. This is NOT a `feedback_no_paid_apis` violation.
google-auth = { version = "^2.55.1", optional = true }
google-auth-oauthlib = { version = "^1.2.1", optional = true }
google-api-python-client = { version = "^2.151.0", optional = true }
# pyasn1 is a transitive dep of google-auth but only needed for the YouTube
# upload path — moved from unconditional main group to the youtube extra
# so prod images without --extras youtube don't carry the extra wheel.
pyasn1 = { version = ">=0.6.3", optional = true }
# atproto/Bluesky removed 2026-06-17 — its cryptography<47 cap blocked the
# cryptography>=48.0.1 fix for GHSA-537c-gmf6-5ccf (Trivy HIGH). Bluesky
# cross-posting (adapter + publishing.bluesky handler) was retired with it.

[project.optional-dependencies]
ml = ["torch", "transformers", "diffusers"]
# rerank — the LlamaIndex cross-encoder reranker stack (services/rag_engine.py).
# Lists ONLY sentence-transformers: it pulls torch transitively, and torch keeps
# its own `source = "pytorch-cu128"` pin. Listing torch *explicitly* here is a
# footgun — it spawns a second resolution context where sentence-transformers'
# generic `torch` requirement resolves from PyPI (a newer +cuXXX build) instead
# of unifying onto the cu128-pinned torch already in the lock, producing a broken
# two-torch lock. The two pipeline images (worker + OSS standalone) install this;
# CI does not — that's the whole point.
rerank = ["sentence-transformers"]
profiling = ["pyroscope-io"]
# YouTube publishing — the operator opts in once they've run the OAuth
# consent flow (`poindexter integrations youtube setup`). See
# services/publish_adapters/youtube.py + Glad-Labs/poindexter#40.
youtube = ["google-auth", "google-auth-oauthlib", "google-api-python-client", "pyasn1"]

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^9.1"
pytest-asyncio = ">=1.0,<2.0"
pytest-cov = ">=4,<8"
pytest-timeout = "^2.0"
pytest-xdist = "^3.0"
pytest-forked = "^1.6"
pytest-benchmark = "^4.0"
hypothesis = "^6.0"  # property-based tests for the deterministic quality scorers (#337c)

# Code Quality
black = "^26.3.1"
isort = "^5.0"
pylint = ">=2,<5"
ruff = "^0.15.18"
mypy = ">=1,<3"
bandit = "^1.7"

# Pre-commit
pre-commit = ">=3,<5"

# Development Tools
ipython = "^9.14"

[project.scripts]
api = "cofounder_agent.main:app"
# Plain `poindexter <command>` CLI (no `python -m` required).
# Same entry point as python -m poindexter — routes through app.main.
poindexter = "poindexter.cli.app:main"

# Plugin discovery — setuptools entry_points groups used by
# plugins.registry.get_<type>(). Any package (core or third-party)
# that declares entry_points under these groups is discovered at
# runtime. See docs/architecture/plugin-architecture.md for the
# full design.
[project.entry-points."poindexter.taps"]
hello = "cofounder_agent.plugins.samples.hello_tap:HelloTap"
memory = "cofounder_agent.services.taps.memory:MemoryFilesTap"
posts = "cofounder_agent.services.taps.published_posts:PostsTap"
audit = "cofounder_agent.services.taps.audit:AuditTap"
brain_knowledge = "cofounder_agent.services.taps.brain_knowledge:BrainKnowledgeTap"
brain_decisions = "cofounder_agent.services.taps.brain_decisions:BrainDecisionsTap"
claude_code_sessions = "cofounder_agent.services.taps.claude_code_sessions:ClaudeCodeSessionsTap"
openclaw_sqlite = "cofounder_agent.services.taps.openclaw_sqlite:OpenClawSQLiteTap"

[project.entry-points."poindexter.probes"]
database = "cofounder_agent.plugins.samples.database_probe:DatabaseProbe"

[project.entry-points."poindexter.jobs"]
# noop + sync_page_views removed 2026-06-02 (#936) — dead no-op jobs; kept in
# sync with plugins.registry._SAMPLES (test_registry_completeness enforces it).
expire_stale_approvals = "cofounder_agent.services.jobs.expire_stale_approvals:ExpireStaleApprovalsJob"
db_backup = "cofounder_agent.services.jobs.db_backup:DbBackupJob"
render_prometheus_rules = "cofounder_agent.services.jobs.render_prometheus_rules:RenderPrometheusRulesJob"
render_alertmanager_config = "cofounder_agent.services.jobs.render_alertmanager_config:RenderAlertmanagerConfigJob"
postgres_vacuum = "cofounder_agent.services.jobs.postgres_vacuum:PostgresVacuumJob"
check_published_links = "cofounder_agent.services.jobs.check_published_links:CheckPublishedLinksJob"
flag_missing_seo = "cofounder_agent.services.jobs.flag_missing_seo:FlagMissingSeoJob"
fix_missing_seo = "cofounder_agent.services.jobs.fix_missing_seo:FixMissingSeoJob"
detect_duplicate_posts = "cofounder_agent.services.jobs.detect_duplicate_posts:DetectDuplicatePostsJob"
audit_published_quality = "cofounder_agent.services.jobs.audit_published_quality:AuditPublishedQualityJob"
fix_broken_internal_links = "cofounder_agent.services.jobs.fix_broken_internal_links:FixBrokenInternalLinksJob"
fix_broken_external_links = "cofounder_agent.services.jobs.fix_broken_external_links:FixBrokenExternalLinksJob"
fix_uncategorized_posts = "cofounder_agent.services.jobs.fix_uncategorized_posts:FixUncategorizedPostsJob"
tune_publish_threshold = "cofounder_agent.services.jobs.tune_publish_threshold:TunePublishThresholdJob"
verify_published_posts = "cofounder_agent.services.jobs.verify_published_posts:VerifyPublishedPostsJob"
crosspost_to_devto = "cofounder_agent.services.jobs.crosspost_to_devto:CrosspostToDevtoJob"
update_utility_rates = "cofounder_agent.services.jobs.update_utility_rates:UpdateUtilityRatesJob"
analyze_topic_gaps = "cofounder_agent.services.jobs.analyze_topic_gaps:AnalyzeTopicGapsJob"
run_niche_topic_sweep = "cofounder_agent.services.jobs.run_niche_topic_sweep:RunNicheTopicSweepJob"
run_dev_diary_post = "cofounder_agent.services.jobs.run_dev_diary_post:RunDevDiaryPostJob"
detect_anomalies = "cofounder_agent.services.jobs.detect_anomalies:DetectAnomaliesJob"
check_memory_staleness = "cofounder_agent.services.jobs.check_memory_staleness:CheckMemoryStalenessJob"
morning_brief = "cofounder_agent.services.jobs.morning_brief:MorningBriefJob"
run_taps = "cofounder_agent.services.jobs.run_taps:RunTapsJob"
run_retention = "cofounder_agent.services.jobs.run_retention:RunRetentionJob"

[project.entry-points."poindexter.topic_sources"]
hackernews = "cofounder_agent.services.topic_sources.hackernews:HackerNewsSource"
devto = "cofounder_agent.services.topic_sources.devto:DevtoSource"
web_search = "cofounder_agent.services.topic_sources.web_search:WebSearchSource"
knowledge = "cofounder_agent.services.topic_sources.knowledge:KnowledgeSource"
codebase = "cofounder_agent.services.topic_sources.codebase:CodebaseSource"
dev_diary = "cofounder_agent.services.topic_sources.dev_diary_source:DevDiarySource"
igdb = "cofounder_agent.services.topic_sources.igdb:IGDBSource"

[project.entry-points."poindexter.image_providers"]
pexels = "cofounder_agent.services.image_providers.pexels:PexelsProvider"
image_gen = "cofounder_agent.services.image_providers.image_gen:ImageGenProvider"
ai_generation = "cofounder_agent.services.image_providers.ai_generation:AIGenerationProvider"

# Stages moved from services/stages/ to modules/content/stages/ in the
# Module v1 Phase 3 migration (2026-06-04); targets repointed to match
# (kept in lockstep with plugins.registry._SAMPLES).
[project.entry-points."poindexter.stages"]
verify_task = "cofounder_agent.modules.content.stages.verify_task:VerifyTaskStage"
generate_content = "cofounder_agent.modules.content.stages.generate_content:GenerateContentStage"
writer_self_review = "cofounder_agent.modules.content.stages.writer_self_review:WriterSelfReviewStage"
quality_evaluation = "cofounder_agent.modules.content.stages.quality_evaluation:QualityEvaluationStage"
url_validation = "cofounder_agent.modules.content.stages.url_validation:UrlValidationStage"
replace_inline_images = "cofounder_agent.modules.content.stages.replace_inline_images:ReplaceInlineImagesStage"
source_featured_image = "cofounder_agent.modules.content.stages.source_featured_image:SourceFeaturedImageStage"
generate_seo_metadata = "cofounder_agent.modules.content.stages.generate_seo_metadata:GenerateSeoMetadataStage"
generate_media_scripts = "cofounder_agent.modules.content.stages.generate_media_scripts:GenerateMediaScriptsStage"
generate_video_shot_list = "cofounder_agent.modules.content.stages.generate_video_shot_list:GenerateVideoShotListStage"
capture_training_data = "cofounder_agent.modules.content.stages.capture_training_data:CaptureTrainingDataStage"
finalize_task = "cofounder_agent.modules.content.stages.finalize_task:FinalizeTaskStage"

[project.entry-points."poindexter.llm_providers"]
ollama_native = "cofounder_agent.services.llm_providers.ollama_native:OllamaNativeProvider"
openai_compat = "cofounder_agent.services.llm_providers.openai_compat:OpenAICompatProvider"
# LiteLLM-backed provider — the production default after migration 0160
# (Glad-Labs/poindexter#372). Also discoverable via plugins/registry.py
# core_samples so it's available even when entry_points haven't been
# refreshed (e.g. dev installs where `poetry install` hasn't re-run
# since this entry was added).
litellm = "cofounder_agent.services.llm_providers.litellm_provider:LiteLLMProvider"

# Module v1 (Glad-Labs/poindexter#490) — business-function modules.
# In-tree modules (e.g. content) are discovered by DIRECTORY SCAN
# in ``plugins/registry.py`` (Module v1 Phase 5) — they are NOT listed
# here, so a private module never leaks its name through the shared
# pyproject and a stripped private module disappears by deleting its
# package directory alone. This group stays declared for EXTERNAL /
# overlay modules installed via ``pip`` — the discovery path the
# overlay-package endgame uses. See
# ``docs/architecture/2026-06-04-module-visibility-sync-design.md``.
[project.entry-points."poindexter.modules"]

[build-system]
# poetry-core >=2.0 is required to read the PEP 621 [project] table above
# (older cores silently ignore it, dropping name/version at build time).
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# ===== POETRY SOURCES =====
# Explicit-priority source for the CPU-only torch wheels. The pipeline
# images install torch (via the `rerank` extra) purely for the CPU
# cross-encoder reranker, so the CPU build is correct and ~2 GB smaller
# than cu128. priority="explicit" means poetry only consults this index
# for packages that pin source = "pytorch-cpu"; everything else still
# resolves from PyPI. The CUDA (cu128) torch that drives image-gen lives in
# scripts/Dockerfile.image-gen, not here. See glad-labs-stack#334 for the
# original cu128 pin and the 2026-06-23 CPU-trim follow-up spec.
[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

# ===== TOOL CONFIGURATION =====

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["cofounder_agent"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-attributes = 7
max-locals = 15
max-args = 8

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
strict_equality = true
# Completeness noise (~72% of backlog) — re-enable incrementally as annotations improve.
# Real-bug codes (return-value, union-attr, arg-type, attr-defined) remain active.
disable_error_code = ["no-untyped-def", "type-arg", "no-any-return", "untyped-decorator"]

[[tool.mypy.overrides]]
module = [
    "tests.*",
]
ignore_errors = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
]
ignore = [
    "E501",  # line too long (handled by black)
    "E402",  # conditional/guard imports after module-level constants are intentional
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "C408",  # dict() vs {} is a style preference; both are idiomatic
    "E741",  # ambiguous variable names (l/O/I) exist in legacy helpers
    "ARG001",  # handler callbacks receive a fixed positional signature
    "ARG002",  # handler callbacks receive a fixed positional signature
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["ARG", "B017"]
# FastAPI routes: Depends(...) parameters intentionally hold auth/db handles
# without being referenced in the body. request: Request is often supplied
# by middleware for downstream handlers. Don't flag those.
"routes/*" = ["ARG001"]
"middleware/*" = ["ARG002"]
# main.py hosts a handful of FastAPI routes directly (legacy); same rule
# applies — Depends() params may be unused in the body.
"main.py" = ["ARG001"]
# Exception handlers (request, exc) and startup/shutdown hooks get
# framework-mandated params.
"utils/middleware_config.py" = ["ARG001"]
"utils/route_registration.py" = ["ARG001"]
# Stub/no-op broadcasters — **kwargs swallow caller args for API compat.
"services/progress_broadcaster.py" = ["ARG001"]
"services/websocket_manager.py" = ["ARG002"]
# Mock crewai_tools shim — matches third-party library signatures even
# though we only ever log a warning.
"agents/content_agent/utils/crewai_tools_mock.py" = ["ARG002"]
# Namespace-package sys.path fixes must run before imports.
"agents/content_agent/services/llm_client.py" = ["E402"]
"agents/content_agent/services/pexels_client.py" = ["E402"]
"agents/content_agent/config.py" = ["E402"]
# Quality scorers all share a (content, context, cfg) signature for
# uniform dispatch, even when individual scorers don't read all three.
"services/quality_scorers.py" = ["ARG001"]
# Job Protocol: run(pool, config). Subprocess jobs (db_backup) don't
# need the pool — they shell out to a CLI that reads DATABASE_URL itself.
"services/jobs/*" = ["ARG002"]
# Plugin sample implementations are Protocol-contract reference stubs.
# The whole point is to show the minimum shape, not to use every arg.
"plugins/samples/*" = ["ARG002"]
# Phase executors share the Phase Protocol signature even when a given
# phase doesn't need the config kwarg.
"services/phases/*" = ["ARG002"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
# pytest-asyncio >=0.24 warns when this isn't set explicitly. "function"
# matches the existing per-test-function isolation we already get; making
# it explicit silences the PytestDeprecationWarning.
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["../..", ".", "../"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "integration_db: integration tests that require a live Postgres (GH#21 harness)",
    "api: api tests",
    "e2e: end-to-end tests",
    "performance: performance tests",
    "slow: slow tests",
    "voice: voice interface tests",
    "websocket: websocket tests",
    "benchmark: benchmark tests",
    # Provided by the pytest-timeout plugin, but registered here too so
    # `--strict-markers` collection still passes when the plugin isn't
    # installed (e.g. a slim worktree without the dev deps). #994.
    "timeout: per-test wall-clock timeout (pytest-timeout)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["cofounder_agent"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__main__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "migrations"]
assert_used = { skips = ["*/tests/*"] }
